# rag-implement-test

./: LICENSE  lc-eval.py  lc.py  lg-eval.py  lg.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
logs/: rag_run_20260227_113256_9556_2026-02-27T11-32-57-781827.json  rag_run_20260227_113703_0190_2026-02-27T11-37-04-659586.json  rag_run_20260227_114441_6887_2026-02-27T11-44-43-662197.json  rag_run_20260227_123647_3541_2026-02-27T12-36-49-592957.json  rag_run_20260227_124055_1520_2026-02-27T12-40-56-576780.json  rag_run_20260227_124529_0541_2026-02-27T12-45-31-329990.json  rag_run_20260227_130040_0991_2026-02-27T13-00-42-229765.json  rag_run_20260227_144927_6549_2026-02-27T14-49-29-138566.json  rag_run_20260227_145920_7024_2026-02-27T14-59-24-001146.json  rag_run_20260227_145949_1575_2026-02-27T14-59-52-748456.json  rag_run_20260227_152744_3331_2026-02-27T15-27-45-853917.json  rag_run_20260227_152822_2463_2026-02-27T15-28-24-868018.json
