[project]
name = "rag-implement-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "openai>=2.24.0",
    "ragas>=0.4.3",
    "typing>=3.10.0.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langsmith>=0.7.9",
]
